finish: FNode, HNode; todo: CNode, template, alpha-var